# Workspace_Python

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  REQUIREMENTS.md  WHITEPAPER.md  pyproject.toml  requirements.txt
projetos/exemplo/: pyproject.toml
