[project]
name = "workspace-python"
version = "0.1.0"
description = "Workspace Python genérico"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic",
    "python-dotenv",
    "rich",
    "typer",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
