[project]
name = "exemplo"
version = "0.1.0"
description = "Projeto exemplo"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic",
    "python-dotenv",
    "rich",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exemplo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
